add passport middleware

--- a/api/.env
+++ b/api/.env
@@ -7,3 +7,5 @@
 DATABASE_URL="mysql://ecommerce_web:voc%kkjwhRGDv.Q4@103.20.103.245:9403/ecommerce_web"
 
 PORT = 4000
+
+SECRET_KEY = MySecretKey@123*789%%&
