--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.ts",
   "scripts": {
-    "start": "ts-node src/main.ts",
+    "src_build": "tsc",
+    "start": "node dist/main.js",
     "dev": "ts-node-dev --respawn --transpile-only src/main.ts"
   },
   "keywords": [],
@@ -18,9 +19,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
+    "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-http-bearer": "^1.0.1",
     "prisma": "^5.12.1",
+    "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.4"
   },
@@ -29,7 +35,10 @@
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/morgan": "^1.9.9",
+    "@types/passport": "^1.0.16",
+    "@types/passport-http-bearer": "^1.0.41",
     "ts-node-dev": "^2.0.0"
   }
 }
