Refactor AuthController and AuthService classes, add Google OAuth functionality, and update dependencies

--- a/api/.env
+++ b/api/.env
@@ -8,4 +8,10 @@ DATABASE_URL="mysql://ecommerce_web:voc%kkjwhRGDv.Q4@103.20.103.245:9403/ecommer
 
 PORT = 4000
 
-SECRET_KEY = MySecretKey@123*789%%&
+JWT_SECRET = MySecretKey@123*789%%&
+
+JWT_EXPIRES_IN = 7d
+
+GOOGLE_CLIENT_ID = 56408882140-i4vhfg8uuokof0i7pcsdo5eurtjugcml.apps.googleusercontent.com
+
+GOOGLE_CLIENT_SECRET = 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
