--- a/api/.env
+++ b/api/.env
@@ -15,3 +15,5 @@ JWT_EXPIRES_IN = 7d
 GOOGLE_CLIENT_ID = 56408882140-i4vhfg8uuokof0i7pcsdo5eurtjugcml.apps.googleusercontent.com
 
 GOOGLE_CLIENT_SECRET = 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
+
+HOSTNAME = http://localhost:4000
