.gitignore api client

--- a/api/.env
+++ b/api/.env
@@ -17,3 +17,5 @@ GOOGLE_CLIENT_ID = 56408882140-i4vhfg8uuokof0i7pcsdo5eurtjugcml.apps.googleuserc
 GOOGLE_CLIENT_SECRET = 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
 
 HOSTNAME = http://localhost:4000
+
+CLIENT_HOSTNAME = http://localhost:5173
