--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,20 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.19.1",
+    "@tanstack/react-query": "^5.29.2",
     "antd": "^5.16.2",
     "axios": "^1.6.8",
+    "js-cookie": "^3.0.5",
+    "qs": "^6.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "^20.12.7",
+    "@types/qs": "^6.9.15",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
