--- a/api/package.json
+++ b/api/package.json
@@ -29,7 +29,9 @@
     "prisma": "^5.12.1",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.4"
+    "typescript": "^5.4.4",
+    "zod": "^3.22.4",
+    "zod-validation-error": "^3.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
