--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.12.1",
+    "@prisma/client": "^5.14.0",
     "@types/node": "^20.12.7",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
@@ -26,8 +26,9 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-http-bearer": "^1.0.1",
-    "prisma": "^5.12.1",
+    "prisma": "^5.14.0",
     "reflect-metadata": "^0.2.2",
+    "slugify": "^1.6.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.4",
     "zod": "^3.22.4",
