--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.40.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.12.7",
     "@types/qs": "^6.9.15",
