--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "swiper": "11.1.1"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.40.0",
