feat: Add CartPage component and update npm dependencies

--- a/api/.env
+++ b/api/.env
@@ -8,14 +8,16 @@ DATABASE_URL="mysql://ecommerce_web:voc%kkjwhRGDv.Q4@103.20.103.245:9403/ecommer
 
 PORT = 4000
 
-JWT_SECRET = MySecretKey@123*789%%&
+JWT_SECRET = 
 
 JWT_EXPIRES_IN = 7d
 
-GOOGLE_CLIENT_ID = 56408882140-i4vhfg8uuokof0i7pcsdo5eurtjugcml.apps.googleusercontent.com
+GOOGLE_CLIENT_ID = 
 
-GOOGLE_CLIENT_SECRET = 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
+GOOGLE_CLIENT_SECRET = 
 
 HOSTNAME = http://localhost:4000
 
 CLIENT_HOSTNAME = http://localhost:5173
+
+STRIPE_SECRET_KEY = 
