--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "prisma": "^5.15.0",
     "reflect-metadata": "^0.2.2",
     "slugify": "^1.6.6",
+    "stripe": "^15.11.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.4",
     "zod": "^3.22.4",
