--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@ant-design/cssinjs": "^1.19.1",
     "@tanstack/react-query": "^5.29.2",
     "antd": "^5.16.2",
+    "dayjs": "^1.11.11",
     "js-cookie": "^3.0.5",
     "qs": "^6.12.1",
     "react": "^18.2.0",
