--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "@ant-design/cssinjs": "^1.19.1",
     "@tanstack/react-query": "^5.29.2",
     "antd": "^5.16.2",
+    "chart.js": "^4.4.3",
     "dayjs": "^1.11.11",
     "js-cookie": "^3.0.5",
     "qs": "^6.12.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
